# AmoWallet

./: .dockerignore  .gitignore  .railwayignore  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PRODUCTION_READY.md  README_QUICK_START.md  TELEGRAM_QUICK_START.md  VERIFICATION_CHECKLIST.md  flutter_manual_installation_guide.md  nixpacks.toml  package-lock.json  package.json  railway.json  render.yaml  start-services.sh  start_flutter_app.bat  test_contract_audit.ps1  transactions_page_enhanced.dart
crypto-wallet-app/: FEE_SWEEP_INDEX.md  IMPLEMENTATION_COMPLETE.md  MULTISIG_FLUTTER_GUIDE.md  PRODUCTION_DEPLOYMENT.md  README.md
crypto-wallet-app/.github/: copilot-instructions.md
crypto-wallet-app/admin-panel/: index.html
crypto-wallet-app/backend/: .dockerignore  .env.example  ADMIN_API_REFERENCE.md  API_SETUP_GUIDE.md  DATABASE_SETUP_OPTIONS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  Dockerfile  ENV_CHECKLIST.md  FEE_SWEEP_ARCHITECTURE.md  FEE_SWEEP_SETUP.md  GET_API_KEYS.md  HTTPS_SETUP_GUIDE.md  MONETIZATION_COMPLETE.md  MONETIZATION_GUIDE.md  MONETIZATION_SETUP_COMPLETE.md  MULTISIG_SETUP_GUIDE.md  PRODUCTION_SETUP_GUIDE.md  QUICK_REFERENCE.md  RUST.md  SETUP_COMPLETE.md  SETUP_WIZARDS_GUIDE.md  SPENDING_LIMITS_GUIDE.md  SPENDING_LIMITS_SUMMARY.md  TEST_REPORT.md  customize-fees.ps1  database-setup-guide.ps1  finalize-database-setup.ps1  integration-tests.ps1  nixpacks.toml  open-firewall.ps1  package-lock.json  package.json  quick-start-revenue.ps1  server-production.js  server.js  setup-all.ps1  setup-api-keys.js  setup-database-simple.ps1  setup-database.ps1  (+10 more)
crypto-wallet-app/backend/config/: admins.json  app_state.json  audit_log.json  wallet_state.json
crypto-wallet-app/backend/contracts/: MultiSigWallet.sol  hardhat.config.js  package-lock.json  package.json
crypto-wallet-app/backend/contracts/scripts/: deploy.js
crypto-wallet-app/backend/migrations/: 001_initial_schema.sql  002_revenue_tracking.sql
crypto-wallet-app/backend/py-backend/: Dockerfile  README.md  app.py  requirements.txt  worker_pool.py
crypto-wallet-app/backend/py-backend/routes/: wallet.py
crypto-wallet-app/backend/python-service/: Dockerfile  README.md  app.py  pure_python_crypto.py  simple_app.py  smoke_test.py  worker_pool.py
crypto-wallet-app/backend/python-service/dev_cert/: README.md  generate_cert.ps1  make_cert.py
crypto-wallet-app/backend/rust/: Cargo.toml
crypto-wallet-app/backend/rust/src/: contract_auditor.rs  https_server.rs  lib.rs  main.rs  multisig.rs  multisig_bytecode.hex  secure_signer.rs  spending_monitor.rs
crypto-wallet-app/backend/scripts/: deploy.sh  run-migrations.sh  setup-ssl.sh
crypto-wallet-app/backend/src/: app.js
crypto-wallet-app/backend/src/config/: database.js  monitoring.js  ssl-config.js  windows-cert-generator.js
crypto-wallet-app/backend/src/lib/: js-crypto.js  python-client.js  rust-crypto-server.js  rust-crypto.js  rustWorkerPool.js  transactionManager.js
crypto-wallet-app/backend/src/middleware/: auth.js  errorHandler.js  rateLimiter.js  securityMiddleware.js  validation.js
crypto-wallet-app/backend/src/models/: index.js
crypto-wallet-app/backend/src/routes/: adminRoutes.js  auditRoutes.js  authRoutes.js  blockchainRoutes.js  healthRoutes.js  multisigRoutes.js  priceRoutes.js  secureRoutes.js  spendingRoutes.js  swapPublicRoutes.js  (+2 more)
crypto-wallet-app/backend/systemd/: crypto-wallet-backend.service
crypto-wallet-app/backend/test/: smoke.js
crypto-wallet-app/frontend/: ANDROID_HTTPS_SETUP.md  NOTIFICATION_GUIDE.md  build-android.ps1  build_output.txt  pubspec.yaml
crypto-wallet-app/frontend/android/: build.gradle.kts  gradle.properties  key.properties.example
crypto-wallet-app/frontend/lib/: app.dart  main.dart
crypto-wallet-app/frontend/linux/: CMakeLists.txt
crypto-wallet-app/frontend/test/: bip39_wallet_test.dart  wallet_service_test.dart  widget_test.dart
src/: main.rs
(+128 files in other folders)
